# learning-langchain-2

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
src/chapter_1/: c_system.py  chat.py  d_prompt.py  e_prompt_model.py  f_chat_prompt.py  g_chat_prompt_model.py  h_structured_output.py  i_csv.py  j_methods.py  k_imperative.py  ka_stream.py  l_declarative.py  test.py
src/chapter_2/: a_text_loader.py  c_pdf_loader.py  d_rec_text_spliter.py  e_rec_text_spliter.py  f_markdown_splitter.py  g_embeddings.py  h_load_split_embed.py  i_pg_vrctor.py  j_record_manager.py  k_multi_vector_retriver.py  l_ragatouille.py
src/chapter_3/: a_basic_rag.py  b_rewrite.py  c_multi_query.py  d_rag_fusion.py  e_hyde.py  f_router.py  g_semantic_router.py  h_self_query.py  i_sql_example.py
src/chapter_4/: a_simple_memory.py  b_state_graph.py  c_persistent_memory.py  d_trim_message.py  e_filter_messages.py  f_merge_messages.py
src/chapter_5/: a_chatbot.py  b_sql.py  c_multi_rag.py
src/chapter_6/: a_basic_agent.py  c_multi_tools.py
src/chapter_7/: a_reflection.py  b_subgraph_direct.py  c_subgraph_function.py  d_supervisor.py
src/chapter_8/: a_structured_output.py  b_streaming_output.py
