[project]
name = "learning-langchain-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashish265",email = "ashishgupta2692@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "community (>=1.0.0b1,<2.0.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)",
    "ragatouille (>=0.0.9.post2,<0.0.10)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
